--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: compress
 {% include head.html %}
 <body id="homepage">
 
-  <div class="block-left">
+  <div>
     <div class="content">
       <div class="main-info">
         <a href="{{ site.url }}" class="logo"><img src="{{ site.url }}/images/{{ site.logo }}"></a>
@@ -22,21 +22,6 @@ layout: compress
     </div>
     <canvas></canvas>
   </div>
-
-  <div class="block-right">
-    <a href="{{ site.url }}/posts" title="posts" class="posts-menu-icon"></a>
-    <span class="posts-link">POSTS</span>
-    <a title="project" class="projects-menu-icon">
-      <span></span>
-    </a>
-    <span class="projects-link">PROJECTS</span>
-    <div class="content">
-      <div class="about-info">
-        {{ content }}
-      </div>
-    </div>
-  </div>
-  {% include overlay.html %}
   {% include scripts.html %}
   <script src="{{ site.url }}/assets/js/canvas.js"></script>
 </body>
