--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: compress
 {% include head.html %}
 <body id="homepage">
 
-  <div>
+  <div class="block-left" style="width: 100%;">
     <div class="content">
       <div class="main-info">
         <a href="{{ site.url }}" class="logo"><img src="{{ site.url }}/images/{{ site.logo }}"></a>
@@ -17,6 +17,7 @@ layout: compress
         <h2>
           {{ site.description }}
         </h2>
+        {{ content }}
         {% include social-links.html %}
       </div>
     </div>
